--- a/Slor.Evernote.QuickCreate/Slor.Evernote.QuickCreate.Web/project.json
+++ b/Slor.Evernote.QuickCreate/Slor.Evernote.QuickCreate.Web/project.json
@@ -12,10 +12,18 @@
         "**.vspscc"
     ],
     "dependencies": {
-        "Microsoft.AspNet.Server.IIS": "1.0.0-beta2"
+        "Microsoft.AspNet.Server.IIS": "1.0.0-beta2", // TODO remove this since hosting on linux
+        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta2",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-beta2",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-beta2",        
+        "Kestrel": "1.0.0-beta2"
     },
-    "frameworks" : {
-        "aspnet50" : { },
-        "aspnetcore50" : { }
+    "frameworks": {
+        "aspnet50": { },
+        "aspnetcore50": { }
+    },
+    "commands": {
+        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
+        "kestrel": "Microsoft.AspNet.Hosting --server Kestrel --server.urls http://localhost:5000"
     }
 }
